--- a/src/app/core/layout/footer/footer.component.html
+++ b/src/app/core/layout/footer/footer.component.html
@@ -9,18 +9,18 @@
       </div>
 
       <div class="mb-5">
-        <a href="/" class="text-white me-3">Home</a>
-        <a href="/products" class="text-white me-3">Productos</a>
-        <a href="/cart" class="text-white me-3">Carrito</a>
-        <a href="/" class="text-white me-3">Quienes somos</a>
-        <a href="/consultas" class="text-white me-3">Consultas</a>
+        <a href="/" class="me-3">Home</a>
+        <a href="/products" class="me-3">Productos</a>
+        <a href="/cart" class="me-3">Carrito</a>
+        <a href="/" class="me-3">Quienes somos</a>
+        <a href="/consultas" class="me-3">Consultas</a>
       </div>
 
       <div class="mb-5">
-        <a href="https://www.facebook.com/Cala-Home-Dec%C3%B3-115276836982670" target="_blank" class="text-white me-3">
+        <a href="https://www.facebook.com/Cala-Home-Dec%C3%B3-115276836982670" target="_blank" class="me-4">
           <i class="fab fa-facebook-f fa-lg"></i>
         </a>
-        <a href="https://www.instagram.com/cala.macramedeco/" target="_blank" class="text-white">
+        <a href="https://www.instagram.com/cala.macramedeco/" target="_blank">
           <i class="fab fa-instagram fa-lg"></i>
         </a>
       </div>
