--- a/src/app/core/layout/navbar/navbar.component.html
+++ b/src/app/core/layout/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-lg bg-white fixed-top">
   <div class="container-fluid d-flex justify-content-center">
     <a class="navbar-brand" href="/">
       <img src="./../../../../assets/img/Brands/c a l a trans.png" alt="">
