--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -2,10 +2,10 @@
   <header>
     <img class="img-fluid w-100 h-100" src="./../../../assets/img/Brands/portada.png">
   </header>
-  <section class="d-flex row m-3">
-    <div class="p-5">
-      <h2 class="mt-3 text-center">Tienda de objetos unicos</h2>
-      <h6 class="mb-3 text-center text-muted">
+  <section class="d-flex row">
+    <div class="text-center">
+      <h2>Tienda de objetos unicos</h2>
+      <h6 class="text-muted">
         En c a l a le otorgamos valor a lo artesanal y a lo natural. Cada una de
         nuestras piezas está confeccionada a mano y priorizamos el uso de fibras
         vegetales para desarrollar los diseños.
