--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -2,14 +2,14 @@
   <header>
     <img class="img-fluid w-100 h-100" src="./../../../assets/img/Brands/portada.png">
   </header>
-  <section class="d-flex row">
+  <section class="d-flex row text-center">
     <div class="text-center">
-      <h2>Tienda de objetos unicos</h2>
-      <h6 class="text-muted">
-        En c a l a le otorgamos valor a lo artesanal y a lo natural. Cada una de
-        nuestras piezas está confeccionada a mano y priorizamos el uso de fibras
+      <h2 class="fs-1">Tienda de objetos unicos</h2>
+      <h5 class="text-muted fs-3">
+        En c a l a le otorgamos valor a lo artesanal y a lo natural.<br> Cada una de
+        nuestras piezas está confeccionada a mano priorizando<br> el uso de fibras
         vegetales para desarrollar los diseños.
-      </h6>
+      </h5>
     </div>
     <div class="d-flex justify-content-around">
       <div class="section-main d-flex row">
@@ -51,9 +51,6 @@
         </div>
       </div>
     </div>
-  </section>
-  <section class="my-5">
-    <img class="logo" src="./../../../assets/img/cala-trans.png" alt="" />
   </section>
   <section class="section-end d-flex justify-content-around align-items-center">
     <div class="card col-md-6">
