--- a/src/app/features/home/home.component.css
+++ b/src/app/features/home/home.component.css
@@ -1,14 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@700&family=Pushster&display=swap");
 
 section {
-  width: 100%;
-  height: 100%;
-  margin-top: 6rem;
-  margin-bottom: 6rem;
+  margin-top: 200px;
+  margin-bottom: 200px;
 }
 
+
 h2 {
-  font-family: "Pushster", cursive;
+  font-family: "Java";
+}
+
+h5 {
+  font-family: "Romantisch"
 }
 
 .section-main {
@@ -19,8 +22,8 @@ h2 {
 img {
   height: 200px;
   width: 300px;
-  margin-top: 6rem;
-  margin-bottom: 6rem;
+  margin-top: 6rem !important;
+  margin-bottom: 6rem !important;
 }
 
 .logo {
