--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@700&display=swap");
 
+@font-face {
+  font-family: 'Java';
+  src: url('./assets/Fonts/JAVATEXT.TTF') format('truetype');
+}
+
+@font-face {
+  font-family: 'Romantisch';
+  src: url('./assets/Fonts/ROMANTISCH.TTF') format('truetype');
+}
+
 * {
   margin: 0;
   padding: 0;
