--- a/src/app/features/home/home.component.css
+++ b/src/app/features/home/home.component.css
@@ -7,11 +7,11 @@ section {
 
 
 h2 {
-  font-family: "Java";
+  font-family: "Romantisch";
 }
 
 h5 {
-  font-family: "Romantisch"
+  font-family: "Java"
 }
 
 .section-main {
