--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -15,7 +15,7 @@
       <div class="section-main d-flex row">
         <img src="./../../../assets/img/svg3.svg" alt="" />
         <div class="m-3">
-          <h4 class="ms-3">Ambientación</h4>
+          <h2 class="ms-3">AMBIENTACION</h2>
           <p class="text-muted">
             Contamos con el servicio de asesorías en ambientación y diseño de
             interiores. No sólo si necesitas ayuda para elegir una de nuestras
@@ -29,7 +29,7 @@
       <div class="section-main d-flex row">
         <img src="./../../../assets/img/svg5.svg" alt="" />
         <div class="m-3">
-          <h4 class="ms-3">Fabricación a medida</h4>
+          <h2>FABRICACION A MEDIDA</h2>
           <p class="text-muted">
             Además de los objetos estandarizados, fabricamos también, piezas a
             medida, personalizadas a cada uno de nuestros clientes. Objetos
@@ -41,12 +41,11 @@
       <div class="section-main d-flex row">
         <img src="./../../../assets/img/svg4.svg" alt="" />
         <div class="m-3">
-          <h4 class="ms-3">Quienes Somos</h4>
+          <h2 class="ms-3">ARQUITECTURA</h2>
           <p class="text-muted">
-            C a l a como muchos otros emprendimientos, nació en la vorágine de
-            la pandemia, en medio de la introspección y con el objetivo de
-            venerar los espacios interiores y exteriores de nuestro hogar, lugar
-            que nos contiene y nos identifica.
+            Agustina, las manos y cara visible de la marca, es de profesión arquitecta y además de los servicios de
+            ambientación desarrolla de manera paralela el diseño, la dirección y construcción de espacios
+            arquitectónicos y urbanos.
           </p>
         </div>
       </div>
