Cambio de buttons y cards

--- a/src/app/admin/admin/admin.component.html
+++ b/src/app/admin/admin/admin.component.html
@@ -2,8 +2,8 @@
   <div class="row d-flex align-items-center justify-content-center p-5">
     <h1 class="text-center my-5">Panel de administrador</h1>
     <div class="card">
-      <a class="btn btn-pink mt-4" href="admin/users">USUARIOS</a>
-      <a class="btn btn-pink mt-4" href="admin/products">PRODUCTOS</a>
+      <a type="button" href="admin/users" class="btn mb-2"><span>USUARIOS</span></a>
+      <a type="button" href="admin/products" class="btn2"><span>PRODUCTOS</span></a>
     </div>
   </div>
 </div>
