--- a/src/app/features/account/pages/signin/signin.component.html
+++ b/src/app/features/account/pages/signin/signin.component.html
@@ -31,7 +31,9 @@
       <span class="text-danger" *ngIf="errorMessagge != ''">{{
         errorMessagge
       }}</span>
-      <button class="btn btn-primary mt-2 signin">Ingresar</button>
+      <button class="btn">
+        <span>Ingresar</span>
+      </button>
 
       <div class="text-center mt-4">
         <span>No estás registrado?</span>
