--- a/src/app/features/account/pages/signup/signup.component.html
+++ b/src/app/features/account/pages/signup/signup.component.html
@@ -37,7 +37,9 @@
         <input type="text" class="form-control me-2" placeholder="Username" formControlName="username" />
         <input type="password" class="form-control me-2" placeholder="***************" formControlName="password" />
       </div>
-      <button class="btn btn-primary mt-3 signup">Registrarse</button>
+      <button class="btn">
+        <span>Registrarse</span>
+      </button>
       <div class="text-center mt-3">
         <span>Ya sos usuari@?</span>
         <a routerLink="../login" class="login-text text-decoration-none">
