--- a/src/app/admin/admin/admin.component.css
+++ b/src/app/admin/admin/admin.component.css
@@ -5,3 +5,116 @@
   color: #fff;
   width: 780px;
 }
+/* From cssbuttons.io by @Damithkumara */
+.btn {
+  padding: 0.9em 1.8em;
+  text-transform: uppercase;
+  text-decoration: none;
+  letter-spacing: 4px;
+  color: transparent;
+  border: 3px solid #efc2bd;
+  font-size: 14px;
+  position: relative;
+  font-family: inherit;
+  background: transparent;
+ }
+
+ .btn::before {
+  content: "Administrar";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #617886;
+  color: #efc2bd;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.5s;
+ }
+
+ .btn:hover::before {
+  left: 100%;
+  transform: scale(0) rotateY(360deg);
+  opacity: 0;
+ }
+
+ .btn::after {
+  content: "Usuarios";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background-color: #617886;
+  color: #efc2bd;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.5s;
+  transform: scale(0) rotateY(0deg);
+  opacity: 0;
+ }
+
+ .btn:hover::after {
+  left: 0;
+  transform: scale(1) rotateY(360deg);
+  opacity: 1;
+ }
+ .btn2 {
+  padding: 0.9em 1.8em;
+  text-transform: uppercase;
+  text-decoration: none;
+  letter-spacing: 4px;
+  color: transparent;
+  border: 3px solid #efc2bd;
+  font-size: 14px;
+  position: relative;
+  font-family: inherit;
+  background: transparent;
+ }
+
+ .btn2::before {
+  content: "Administrar";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #617886;
+  color: #efc2bd;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.5s;
+ }
+
+ .btn2:hover::before {
+  left: 100%;
+  transform: scale(0) rotateY(360deg);
+  opacity: 0;
+ }
+
+ .btn2::after {
+  content: "Productos";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background-color: #617886;
+  color: #efc2bd;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.5s;
+  transform: scale(0) rotateY(0deg);
+  opacity: 0;
+ }
+
+ .btn2:hover::after {
+  left: 0;
+  transform: scale(1) rotateY(360deg);
+  opacity: 1;
+ }
