--- a/src/app/features/account/pages/signup/signup.component.css
+++ b/src/app/features/account/pages/signup/signup.component.css
@@ -14,21 +14,6 @@ h3 {
   color: white;
   padding: 0 3rem;
 }
-
-.btn {
-  background-color: var(--pinky) !important;
-  color: var(--dark);
-  padding: 0;
-  transition: ease 0.3s;
-  height: 100%;
-  padding: 0.5rem;
-}
-
-.btn:hover {
-  background-color: var(--dark) !important;
-  color: var(--pinky) !important;
-}
-
 .progress {
   width: 40vh;
   max-width: 80vw;
@@ -98,19 +83,47 @@ input:focus {
   background-color: #efc2bd;
   color: #000;
 }
-
 .btn {
-  background-color: #617886;
-  border-color: #efc2bd;
-  /* height: 80px; */
+  position: relative;
+  margin: auto;
+  padding: 12px 18px;
+  transition: all 0.2s ease;
+  border: none;
+  background: none;
+ }
+
+ .btn:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  border-radius: 50px;
+  background: #efc2bd;
+  width: 45px;
+  height: 45px;
+  transition: all 0.3s ease;
+
+ }
+
+ .btn span {
+  position: relative;
   font-size: 18px;
-}
+  font-weight: 700;
+  letter-spacing: 0.05em;
+  color: #fff;
+ }
 
-.btn:hover {
-  background-color: #efc2bd;
-  color: #1c1e21;
-}
+ .btn:hover:before {
+  width: 100%;
+  background: #b1dae7;
 
+
+
+ }
+ .btn:active {
+  transform: scale(0.95);
+ }
 .login-text {
   color: #efc2bd;
 }
