--- a/src/app/features/products/pages/products/products.component.css
+++ b/src/app/features/products/pages/products/products.component.css
@@ -10,3 +10,12 @@ h1 {
   font-family: "Pushster", cursive;
   color: #1c2331;
 }
+/* From cssbuttons.io by @adamgiebl */
+.card {
+  width: 320px;
+  height: 400px;
+  border-radius: 30px;
+  background: #e0e0e0;
+  box-shadow: 15px 15px 30px #bebebe,
+              -15px -15px 30px #ffffff;
+ }
