--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -4,7 +4,7 @@
   </header>
   <section class="d-flex row text-center">
     <div class="text-center">
-      <h2 class="fs-1">Tienda de objetos unicos</h2>
+      <h2 class="fs-1">TIENDA DE OBJETOS UNICOS</h2>
       <h5 class="text-muted fs-3">
         En c a l a le otorgamos valor a lo artesanal y a lo natural.<br> Cada una de
         nuestras piezas está confeccionada a mano priorizando<br> el uso de fibras
@@ -59,7 +59,7 @@
     </div>
 
     <div class="col-md-4 p-4">
-      <h2 class="text-center">Diseños unicos</h2>
+      <h2 class="text-center">DISEÑOS UNICOS</h2>
       <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae iste
         perspiciatis doloremque. Lorem ipsum dolor sit amet consectetur,
@@ -74,7 +74,7 @@
   </section>
   <section class="section-end d-flex justify-content-around align-items-center">
     <div class="col-md-4 p-4">
-      <h2 class="text-center">Deco para interiores</h2>
+      <h2 class="text-center">DECO PARA INTERIORES</h2>
       <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae iste
         perspiciatis doloremque. Lorem ipsum dolor sit amet consectetur,
