--- a/src/app/admin/admin-products/admin-products.component.css
+++ b/src/app/admin/admin-products/admin-products.component.css
@@ -7,3 +7,16 @@
   background-color: rgba(255, 255, 255, 0.8);
   color: var(--dark);
 }
+
+input.ng-valid.ng-touched {
+  border: 1px solid rgb(0, 194, 0);
+}
+
+input.ng-invalid.ng-touched {
+  border: 1px solid tomato;
+}
+
+.error {
+  color: tomato;
+  font-size: 12px;
+}
